# emulate-server

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.k8s  Dockerfile.local  README.md  compose.yaml  emulator-agent.yaml  emulator-server.yaml
.github/workflows/: docker-publish.yml
config/: agents-compose.json  agents.json  qsched-compose.json  qsched.json
entity/: Cargo.toml
entity-bk/: Cargo.toml
entity-bk/src/: agent.rs  lib.rs
entity/src/: agent.rs  lib.rs  options.rs  qthread.rs  resource.rs  task.rs
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  db-pvc.yaml  db-secret.yaml  emulater-server.yaml  emulator-server-agent-sv-1.yaml  emulator-server-agent.yaml  emulator-server-sv.yaml  log-pvc.yaml  sched-conf.yaml
migration/: Cargo.toml
migration/src/: create_physical_agent.rs  create_task.rs  create_task_active.rs  create_task_assignment.rs  lib.rs  m20220101_000001_create_options.rs  m20220101_000002_create_agent.rs  m20220101_000002_create_physical_agent.rs  m20220101_000003_create_resource.rs  m20220101_000004_create_task.rs
service/: Cargo.toml
service/src/: lib.rs  qthread.rs  query.rs
src/: config.rs  main.rs  router.rs
src/entity/: agent.rs  mod.rs  options.rs  physical_agent.rs  prelude.rs  resource.rs  sea_orm_active_enums.rs  task.rs  task_active.rs  task_assignment.rs
src/router/: mod.rs  physical_agent.rs  physical_agent_utils.rs  task.rs
src/service/: agent.rs  content.rs  mod.rs  options.rs  physical_agent.rs  qthread.rs  resource.rs  task.rs  task_active.rs  task_assignment.rs
src/task/: mod.rs
