[package]
name = "emulate-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "migration"
]

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
migration = { path = "migration" } 
axum = {version = "0.7.4", features = ["macros"]}
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rusqlite = { version = "0.30.0", features = ["bundled"] }
dotenv = "0.15.0"
sea-orm = {version = "0.12.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
chrono = "0.4.33"
uuid = { version = "1.7.0", features = ["v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    ]}
log4rs = {version = "1.3.0", features = ["threshold_filter"]}
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json", "blocking", "native-tls-vendored"] }
http = "1.1.0"